fix some issues and change the quote slider design
Issues fixed:
 * webpage overflowing on mobiles
 * null links redirecting to top of the webpage

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ h6 {
 p {
     margin-top: 0;
     margin-bottom: 1rem;
+    text-align: justify;
 }
 
 abbr[title],
@@ -11804,6 +11805,10 @@ h5,
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
+
+.pricing-entry p {
+    text-align: center;
+}
 @media (max-width: 767.98px) {
     .pricing-entry {
         margin-bottom: 4em;
@@ -12807,7 +12812,6 @@ textarea.form-control {
 
 .quotes-slider {
     padding-top: 3rem;
-    margin-bottom: 4rem;
 }
 
 .quote-container {
@@ -12826,7 +12830,7 @@ textarea.form-control {
     position: absolute;
     top: -2rem;
     left: -2rem;
-    background: #d71331;
+    background: white;
     height: 8rem;
     width: 8rem;
     border-radius: 50%;
@@ -12853,15 +12857,13 @@ textarea.form-control {
 }
 
 .quotes-slider {
-    padding-top: 0;
+    padding-top: 2.5em;
+    padding-bottom: 1em;
+    background: #d71331;
 }
 
 .quotes-slider .owl-item {
     text-align: center;
-}
-
-.image-slider {
-    margin: 3px;
 }
 
 .image-slider .owl-carousel  #item  {
@@ -12915,7 +12917,7 @@ textarea.form-control {
 
 #prize-section h2 {
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 6rem;
     color: white;
     font-size: 3rem;
 }
@@ -13002,11 +13004,15 @@ textarea.form-control {
     }
     
     .first-prize {
-        transform: none;
+        transform: translate(0);
     }
     
     .prize {
-        margin-bottom: 7em;
+        margin-bottom: 5em;
+    }
+    
+    .intern-op {
+        margin-top: 0;
     }
 }
 
